{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 104,
  "lineage": "99b34885-56b4-ddf1-0085-b8cd24a056b4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08fe38a2865705db8",
            "arn": "arn:aws:ec2:us-east-1:967318600376:instance/i-00e24d24f5486ee95",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00e24d24f5486ee95",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MyKeyPair",
            "monitoring": false,
            "primary_network_interface_id": "eni-016bd4a6472f9c0a6",
            "private_dns": "ip-172-31-40-219.ec2.internal",
            "private_ip": "172.31.40.219",
            "public_dns": "ec2-3-85-194-66.compute-1.amazonaws.com",
            "public_ip": "3.85.194.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d4e6d50f6a58c10b",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "customer-security-group",
              "employee-security-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0451b15b",
            "tags": {
              "Name": "dev-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-056b1a39074f3b3ff",
              "sg-08f8194e5b14e7571"
            ]
          },
          "dependencies": [
            "aws_key_pair.demo_key",
            "aws_security_group.customer",
            "aws_security_group.employee"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08fe38a2865705db8",
            "arn": "arn:aws:ec2:us-east-1:967318600376:instance/i-01910cc8f048f8bc6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01910cc8f048f8bc6",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "MyKeyPair",
            "monitoring": false,
            "primary_network_interface_id": "eni-031975efcef331750",
            "private_dns": "ip-172-31-45-152.ec2.internal",
            "private_ip": "172.31.45.152",
            "public_dns": "ec2-18-212-145-167.compute-1.amazonaws.com",
            "public_ip": "18.212.145.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-07feda956c7b5b816",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "employee-security-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0451b15b",
            "tags": {
              "Name": "jenkins-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-056b1a39074f3b3ff"
            ]
          },
          "dependencies": [
            "aws_key_pair.demo_key",
            "aws_security_group.employee"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jump",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08fe38a2865705db8",
            "arn": "arn:aws:ec2:us-east-1:967318600376:instance/i-074fd7b4aaa99f77a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-074fd7b4aaa99f77a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MyKeyPair",
            "monitoring": false,
            "primary_network_interface_id": "eni-07b6978c474ad71b1",
            "private_dns": "ip-172-31-32-52.ec2.internal",
            "private_ip": "172.31.32.52",
            "public_dns": "ec2-34-229-106-75.compute-1.amazonaws.com",
            "public_ip": "34.229.106.75",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02c1f4f8711463d90",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "employee-security-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0451b15b",
            "tags": {
              "Name": "jump-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09982d95a8d9331a9"
            ]
          },
          "dependencies": [
            "aws_key_pair.demo_key",
            "aws_security_group.jump"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prod",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08fe38a2865705db8",
            "arn": "arn:aws:ec2:us-east-1:967318600376:instance/i-0b0ef277a5fd89e50",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b0ef277a5fd89e50",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MyKeyPair",
            "monitoring": false,
            "primary_network_interface_id": "eni-092ba225ebb0c45e6",
            "private_dns": "ip-172-31-37-146.ec2.internal",
            "private_ip": "172.31.37.146",
            "public_dns": "ec2-54-80-210-35.compute-1.amazonaws.com",
            "public_ip": "54.80.210.35",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0528a6856c0177e97",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "customer-security-group",
              "employee-security-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0451b15b",
            "tags": {
              "Name": "prod-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-056b1a39074f3b3ff",
              "sg-08f8194e5b14e7571"
            ]
          },
          "dependencies": [
            "aws_key_pair.demo_key",
            "aws_security_group.customer",
            "aws_security_group.employee"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "customer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967318600376:security-group/sg-08f8194e5b14e7571",
            "description": "Security group for customer laptop",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f8194e5b14e7571",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "customer-security-group",
            "name_prefix": null,
            "owner_id": "967318600376",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-d40132ae"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "employee",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967318600376:security-group/sg-056b1a39074f3b3ff",
            "description": "Security group for employee laptop",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056b1a39074f3b3ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "34.229.106.75/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "employee-security-group",
            "name_prefix": null,
            "owner_id": "967318600376",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-d40132ae"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jump",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967318600376:security-group/sg-09982d95a8d9331a9",
            "description": "Security group for jump box",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09982d95a8d9331a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "jump-security-group",
            "name_prefix": null,
            "owner_id": "967318600376",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-d40132ae"
          }
        }
      ]
    }
  ]
}